<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ash"
    tools:context=".splash">


  <TextView
      android:id="@+id/ownone"
      android:layout_width="170dp"
      android:layout_height="30dp"
      android:fontFamily="@font/spartan_thin"
      android:gravity="center"
      android:text="@string/created_by"
      android:textColor="@color/black"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.947" />

  <TextView
      android:id="@+id/owntwo"
      android:layout_width="127dp"
      android:layout_height="30dp"
      android:fontFamily="@font/dancing"
      android:gravity="center"
      android:text="@string/shyanil_mishra"
      android:textColor="@color/black"
      android:textSize="@dimen/_14sdp"
      android:textStyle="italic"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.977"
      tools:ignore="TextSizeCheck" />

  <ImageView
      android:id="@+id/logoimg"
      android:layout_width="318dp"
      android:layout_height="392dp"
      android:layout_marginBottom="252dp"
      android:contentDescription="@string/todo2"
      android:foregroundGravity="center"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.494"
      app:layout_constraintStart_toStartOf="parent"
      app:srcCompat="@drawable/logo_no_back" />

</androidx.constraintlayout.widget.ConstraintLayout>